# GulcarNetworking

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile
example/: CMakeLists.txt  example.cpp
include/GulcarNet/: ChannelType.h  Client.h  Errors.h  GulcarNet.h  IPAddr.h  Other.h  Server.h  Socket.h
src/: Client.cpp  Errors.cpp  GulcarNet.cpp  IPAddr.cpp  Packet.h  Server.cpp  Socket.cpp  Socket.h  Transport.cpp  Transport.h
